# afa-football-analyzer

./: .gitignore  README.md  lobehub-mcp-config.json  lobehub-plugin.json  pyproject.toml  sync.sh  test_minimal.py  test_stdlib.py
configs/: hyperparams.json
data/: elo_name_map.json  elo_ratings.json  halftime_patterns.json  league_card_stats.json  league_factors.json  league_hints.json  league_name_map.json  odds_calibration.json  official_rules.json  team_form_index.json
scripts/: preprocess_data.py
src/afa_mcp/: __init__.py  historical.py  server.py
